[gd_scene load_steps=9 format=3 uid="uid://c4puvtswkoanj"]

[ext_resource type="Script" uid="uid://cgejoxdggdqff" path="res://UI/item_selection_ui.gd" id="1_8bawh"]
[ext_resource type="Theme" uid="uid://bafvueoykssky" path="res://UI/WIPGame_theme.tres" id="2_ffw1y"]
[ext_resource type="Script" uid="uid://crkavvck8d2ny" path="res://UI/itemtooltippopup.gd" id="3_8bawh"]
[ext_resource type="Script" uid="uid://chq0sdao4tn2u" path="res://UI/tool_tip.gd" id="4_qeotr"]
[ext_resource type="FontFile" uid="uid://disfd6e2crd0s" path="res://UI/Square.ttf" id="5_vg52p"]
[ext_resource type="PackedScene" uid="uid://cugv1iy5s25ud" path="res://UI/tool_tips.tscn" id="6_vg52p"]
[ext_resource type="PackedScene" uid="uid://ffbn76hhr08t" path="res://UI/fade_canvas.tscn" id="7_o2we6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8bawh"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 5.0
expand_margin_top = 5.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0

[node name="ItemSelectionUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8bawh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1151.0
offset_bottom = 650.0
color = Color(0, 0, 0, 1)

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 30.0
offset_top = 33.0
offset_right = 70.0
offset_bottom = 624.0
theme = ExtResource("2_ffw1y")
theme_override_font_sizes/font_size = 45
text = "P
I
C
K

A
N

I
T
E
M"
horizontal_alignment = 1

[node name="SpeedItem" type="Button" parent="."]
layout_mode = 2
offset_left = 267.0
offset_top = 83.0
offset_right = 306.0
offset_bottom = 412.0
mouse_filter = 1
theme = ExtResource("2_ffw1y")
theme_override_font_sizes/font_size = 20
text = "W
H
I
T
E
D
E
M
O
N"
script = ExtResource("3_8bawh")

[node name="ToolTips" type="PanelContainer" parent="SpeedItem"]
top_level = true
layout_mode = 0
offset_left = 320.0
offset_top = 50.0
offset_right = 472.0
offset_bottom = 268.0
theme_override_styles/panel = SubResource("StyleBoxFlat_8bawh")
script = ExtResource("4_qeotr")

[node name="ToolTipText" type="RichTextLabel" parent="SpeedItem/ToolTips"]
layout_mode = 2
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("5_vg52p")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "		 [img]res://player/art/WhiteMoster.png[/img]
Doubles speed for 6 seconds. Have to wait 10 seconds for it to spontaneously refill."
fit_content = true

[node name="GrapplingHook" type="Button" parent="."]
layout_mode = 2
offset_left = 620.0
offset_top = 126.0
offset_right = 650.0
offset_bottom = 526.0
theme = ExtResource("2_ffw1y")
theme_override_font_sizes/font_size = 20
text = "G
R
A
P
P
L
I
N
G
H
O
O
K"
script = ExtResource("3_8bawh")

[node name="ToolTips" parent="GrapplingHook" instance=ExtResource("6_vg52p")]
layout_mode = 0
offset_left = 650.0
offset_top = 50.0
offset_right = 800.0
offset_bottom = 200.0
script = ExtResource("4_qeotr")

[node name="ToolTipText" parent="GrapplingHook/ToolTips" index="0"]
text = "		 [img]res://player/art/Rope.png[/img]
Allows you to grapple onto far away ledges."

[node name="JumpItem" type="Button" parent="."]
layout_mode = 2
offset_left = 441.0
offset_top = 33.0
offset_right = 471.0
offset_bottom = 320.0
theme = ExtResource("2_ffw1y")
theme_override_font_sizes/font_size = 20
text = "P
O
G
O
S
T
I
C
K"
script = ExtResource("3_8bawh")

[node name="ToolTips" parent="JumpItem" instance=ExtResource("6_vg52p")]
layout_mode = 0
offset_left = 400.0
offset_top = 330.0
offset_right = 550.0
offset_bottom = 499.0
script = ExtResource("4_qeotr")

[node name="ToolTipText" parent="JumpItem/ToolTips" index="0"]
text = "	    [img]res://player/art/Pogo.png[/img]
Jump very high. The pogostick is solar powered and takes 6 seconds to recharge."

[node name="StaminaSup" type="Button" parent="."]
layout_mode = 2
offset_left = 794.0
offset_top = 381.0
offset_right = 833.0
offset_bottom = 593.0
theme = ExtResource("2_ffw1y")
theme_override_font_sizes/font_size = 20
text = "W
A
L
K
M
A
N"
script = ExtResource("3_8bawh")

[node name="ToolTips" parent="StaminaSup" instance=ExtResource("6_vg52p")]
layout_mode = 0
offset_left = 850.0
offset_top = 400.0
offset_right = 1108.0
offset_bottom = 596.0
script = ExtResource("4_qeotr")

[node name="ToolTipText" parent="StaminaSup/ToolTips" index="0"]
text = "			    [img]res://player/art/Walkman.png[/img]
Play a 3 second clip of music that fills you with detemination, preventing your stamina from draining. But it takes 15 seconds to rewind back."

[node name="FadeCanvas" parent="." instance=ExtResource("7_o2we6")]

[connection signal="pressed" from="SpeedItem" to="." method="_on_speed_item_pressed"]
[connection signal="pressed" from="GrapplingHook" to="." method="_on_grappling_hook_pressed"]
[connection signal="pressed" from="JumpItem" to="." method="_on_jump_item_pressed"]
[connection signal="pressed" from="StaminaSup" to="." method="_on_stamina_sup_pressed"]
[connection signal="transition_done" from="FadeCanvas" to="." method="_on_fade_canvas_transition_done"]

[editable path="GrapplingHook/ToolTips"]
[editable path="JumpItem/ToolTips"]
[editable path="StaminaSup/ToolTips"]
